# axium-backend

./: .gitignore  LICENSE  README.md  axium.toml  data_test.py  docs.md  main.py  package.json  pyproject.toml  test.py  test_auto_save.py  test_model.pkl  test_reg_model.pkl
ai/: best_knn_iris_model.joblib  classification_model.joblib  demo_pipeline.ipynb  demo_pipeline.py  demo_pipeline_regression.ipynb  linear_regression_california_housing.joblib  pipeline_demo_classification.py  pipeline_demo_regression.py
axium/: __init__.py  axium_typing.py  config.py  folder.py  graph.py  logger.py  node_typing.py  project.py  register.py  utils.py  validator.py
axium-backend/ai/: README.md  pipeline_demo_classification.py
axium-backend/axium/: register.py
axium-backend/src/: sys_setup.py
axium/typing/: __init__.py
core/: config.py  folder.py  logger.py  project.py  server.py  sys_setup.py  ws_io.py
core/api/: __init__.py
docs/ai/: pipeline_demo_classification.py
icons-meta/: extensions.ts  filenames.ts  language_ids.ts
nodes/base/: __init__.py  load_csv.py
nodes/classification/: __init__.py  analyze_data.py  create_time_series_features.py  evaluate_model.py  get_data_info.py  get_model.py  load_csv_data.py  load_model.py  load_sample_dataset.py  plot_confusion_matrix.py  plot_roc_curve.py  save_model.py  train_model.py
scripts/: clone-icons.py  extract-icons.py
src/: main.py
src/axium/: __init__.py  (+7 more)
templates/: classification_load_csv_data.py  classification_plot_confusion_matrix.py  regression_plot_predictions_vs_actual.py  regression_plot_residuals.py
(+72 files in other folders)
