[project]
name = "axium-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pydantic>=2.11.6",
    "python-socketio>=5.13.0",
    "scalar-fastapi>=1.2.2",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "typeguard>=4.4.4",
    "typing-extensions>=4.14.1",
    "uvicorn[standard]>=0.35.0",
    "watchdog>=6.0.0",
    "websockets>=15.0.1",
]
